k8s-services/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  ports:
  - protocol: TCP
    nodePort: 30000
    port: 80
    targetPort: 80
  selector:
    app: frontend
