k8s-services/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: server
